--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 
 <head>
     <meta charset=utf-8/>
+
+    <title>ic-08</title>
+
+    <!-- link stylesheet -->
+    <link rel="stylesheet" href="style.css">
+
+    <script src="d3.v6.1.1/d3.min.js"></script>
 </head>
 
 
 <body>
+    <h1>D3 Part 2</h1>
 
 
+    <script src="main.js"></script>
 </body>
 
 </html>
