bar chart still doesn't have tick marks

--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
 <head>
     <meta charset=utf-8/>
 
+    <!-- title of web page -->
     <title>ic-08</title>
 
     <!-- link stylesheet -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- link d3 library -->
     <script src="d3.v6.1.1/d3.min.js"></script>
 </head>
 
 
 <body>
+    <!-- header for web page -->
     <h1>D3 Part 2</h1>
 
+    <!-- viz 1 -->
+    <div id="vis1"></div>
 
+
+    <h3>Acknowledgements</h3>
+    <div>
+        <ul>
+            <li>
+                <a href="https://d3-graph-gallery.com/graph/barplot_basic.html">Barchart</a>
+            </li>
+        </ul>
+    </div>
+
+ 
     <script src="main.js"></script>
 </body>
 
