--- a/index.html
+++ b/index.html
@@ -29,10 +29,19 @@
             <li>
                 <a href="https://d3-graph-gallery.com/graph/barplot_basic.html">Barchart</a>
             </li>
+            <li>
+                <a href="https://blog.risingstack.com/d3-js-tutorial-bar-charts-with-javascript/">D3 Bar Chart</a>
+            </li>
+            <li>
+                <a href="https://www.tutorialsteacher.com/d3js/axes-in-d3">D3 Axes</a>
+            </li>
+            <li>
+                <a href="https://stackoverflow.com/questions/11189284/d3-axis-labeling">D3 Axes Labeling</a>
+            </li>
         </ul>
     </div>
 
- 
+
     <script src="main.js"></script>
 </body>
 
